--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <h1> Hello, world</h1>
+        
+        Hi, I'm Avanish. I'll make this a proper website at some point.
     </body>
 </html>
