--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<html>
-    <body>
-        <h1> Hello, world</h1>
-        
-        Hi, I'm Avanish. I'll make this a proper website at some point.
-    </body>
-</html>
+---
+layout: default
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
